# chief-of-time

./: .gitignore  README.md  mouse_trace.sqlite3-shm  mouse_trace.sqlite3-wal  pyproject.toml
contrib/: .env.example  com.example.mousetrace.plist
docs/: API.md  API.txt
mousetrace/: __init__.py  cli.py
mousetrace/agent/: __init__.py  config.py  daily_prompt.py  prompt.py  runner.py  tools.py
mousetrace/analysis/: __init__.py  summary.py
mousetrace/api/: __init__.py
mousetrace/audio/: __init__.py  processor.py
mousetrace/capture/: __init__.py  service.py
mousetrace/config/: __init__.py  capture.py  settings.py
mousetrace/database/: __init__.py  db.py  schema.sql
mousetrace/notify/: __init__.py  service.py
mousetrace/sight/: __init__.py  service.py
